{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 110,
  "lineage": "37490339-54d1-9538-cda2-a33a06d8ce96",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:471112659080:loadbalancer/app/geo-run-alb/865701948d574f38",
            "arn_suffix": "app/geo-run-alb/865701948d574f38",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "geo-run-alb-216826215.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:471112659080:loadbalancer/app/geo-run-alb/865701948d574f38",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "geo-run-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00c56c16e566dee63"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02061a92e7b6dc7dc"
              },
              {
                "subnet_id": "subnet-0c6b5adf8c1a95107"
              }
            ],
            "subnets": [
              "subnet-02061a92e7b6dc7dc",
              "subnet-0c6b5adf8c1a95107"
            ],
            "tags": {
              "Environment": "production",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cb3e7393c7cc3759",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:471112659080:listener/app/geo-run-alb/865701948d574f38/9c6f8ba7cf7fe21b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:471112659080:targetgroup/geo-run-tg/6dab6c6416663346",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:471112659080:listener/app/geo-run-alb/865701948d574f38/9c6f8ba7cf7fe21b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:471112659080:loadbalancer/app/geo-run-alb/865701948d574f38",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:471112659080:targetgroup/geo-run-tg/6dab6c6416663346",
            "arn_suffix": "targetgroup/geo-run-tg/6dab6c6416663346",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:471112659080:targetgroup/geo-run-tg/6dab6c6416663346",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "geo-run-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cb3e7393c7cc3759"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471112659080:security-group/sg-00c56c16e566dee63",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c56c16e566dee63",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "geo-run-alb-sg",
            "name_prefix": "",
            "owner_id": "471112659080",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb3e7393c7cc3759"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471112659080:security-group/sg-0cd1cc6d5de647398",
            "description": "ECS Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd1cc6d5de647398",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c56c16e566dee63"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "geo-run-ecs-sg",
            "name_prefix": "",
            "owner_id": "471112659080",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb3e7393c7cc3759"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471112659080:network-acl/acl-01c5c84327e449499",
            "default_network_acl_id": "acl-01c5c84327e449499",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01c5c84327e449499",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "471112659080",
            "subnet_ids": [
              "subnet-02061a92e7b6dc7dc",
              "subnet-0309eade7db82e0d9",
              "subnet-090f90c675a35d55e",
              "subnet-0c6b5adf8c1a95107"
            ],
            "tags": {
              "Environment": "production",
              "Name": "geo-run-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "geo-run-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cb3e7393c7cc3759"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471112659080:route-table/rtb-0b017b598024b03ac",
            "default_route_table_id": "rtb-0b017b598024b03ac",
            "id": "rtb-0b017b598024b03ac",
            "owner_id": "471112659080",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "geo-run-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "geo-run-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0cb3e7393c7cc3759"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471112659080:security-group/sg-058cf179b290e82a5",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-058cf179b290e82a5",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "471112659080",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "geo-run-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "geo-run-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cb3e7393c7cc3759"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-080ba08989935c9f7",
            "arn": "arn:aws:ec2:eu-west-2:471112659080:elastic-ip/eipalloc-080ba08989935c9f7",
            "domain": "vpc",
            "id": "eipalloc-080ba08989935c9f7",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-43-140-144.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.43.140.144",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "geo-run-vpc-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "geo-run-vpc-eu-west-2a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471112659080:internet-gateway/igw-06e61baa888477793",
            "id": "igw-06e61baa888477793",
            "owner_id": "471112659080",
            "tags": {
              "Environment": "production",
              "Name": "geo-run-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "geo-run-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cb3e7393c7cc3759"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-080ba08989935c9f7",
            "association_id": "eipassoc-0881b52094d715f57",
            "connectivity_type": "public",
            "id": "nat-05c866773306a10c4",
            "network_interface_id": "eni-0d7a2d982986aca63",
            "private_ip": "10.0.101.190",
            "public_ip": "13.43.140.144",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c6b5adf8c1a95107",
            "tags": {
              "Environment": "production",
              "Name": "geo-run-vpc-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "geo-run-vpc-eu-west-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02cdee1413554a7d71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05c866773306a10c4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02cdee1413554a7d7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06e61baa888477793",
            "id": "r-rtb-00c7cb509b99d908d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00c7cb509b99d908d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471112659080:route-table/rtb-02cdee1413554a7d7",
            "id": "rtb-02cdee1413554a7d7",
            "owner_id": "471112659080",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "geo-run-vpc-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "geo-run-vpc-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb3e7393c7cc3759"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471112659080:route-table/rtb-00c7cb509b99d908d",
            "id": "rtb-00c7cb509b99d908d",
            "owner_id": "471112659080",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "geo-run-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "geo-run-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb3e7393c7cc3759"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c82bebce25c0c160",
            "route_table_id": "rtb-02cdee1413554a7d7",
            "subnet_id": "subnet-0309eade7db82e0d9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b905b9565ad2419",
            "route_table_id": "rtb-02cdee1413554a7d7",
            "subnet_id": "subnet-090f90c675a35d55e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075aa30c9d5854d4b",
            "route_table_id": "rtb-00c7cb509b99d908d",
            "subnet_id": "subnet-0c6b5adf8c1a95107"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfe254a1bda91f93",
            "route_table_id": "rtb-00c7cb509b99d908d",
            "subnet_id": "subnet-02061a92e7b6dc7dc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471112659080:subnet/subnet-0309eade7db82e0d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0309eade7db82e0d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112659080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "geo-run-vpc-private-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "geo-run-vpc-private-eu-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cb3e7393c7cc3759"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471112659080:subnet/subnet-090f90c675a35d55e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090f90c675a35d55e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112659080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "geo-run-vpc-private-eu-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "geo-run-vpc-private-eu-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cb3e7393c7cc3759"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471112659080:subnet/subnet-0c6b5adf8c1a95107",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6b5adf8c1a95107",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112659080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "geo-run-vpc-public-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "geo-run-vpc-public-eu-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cb3e7393c7cc3759"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471112659080:subnet/subnet-02061a92e7b6dc7dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02061a92e7b6dc7dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112659080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "geo-run-vpc-public-eu-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "geo-run-vpc-public-eu-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cb3e7393c7cc3759"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471112659080:vpc/vpc-0cb3e7393c7cc3759",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c5c84327e449499",
            "default_route_table_id": "rtb-0b017b598024b03ac",
            "default_security_group_id": "sg-058cf179b290e82a5",
            "dhcp_options_id": "dopt-0da0d01579808b442",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cb3e7393c7cc3759",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b017b598024b03ac",
            "owner_id": "471112659080",
            "tags": {
              "Environment": "production",
              "Name": "geo-run-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "geo-run-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}